faz a API inteira

--- a/ExampleWeb/ExampleWeb.API/ExampleWeb.API.csproj
+++ b/ExampleWeb/ExampleWeb.API/ExampleWeb.API.csproj
@@ -7,11 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.10">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\ExampleWeb.Infrastructure\ExampleWeb.Infrastructure.csproj" />
+    <ProjectReference Include="..\ExampleWeb.Migrations\ExampleWeb.Migrations.csproj" />
   </ItemGroup>
 
 </Project>
